@@ -165,10 +165,11 @@ GetSortCapabilities(struct upnphttp * h, const char * action)
 		"<u:%sResponse "
 		"xmlns:u=\"%s\">"
 		"<SortCaps>"
-                  "dc:title,"
-                  "dc:date,"
+		  "dc:title,"
+		  "dc:date,"
 		  "upnp:class,"
-                  "upnp:originalTrackNumber"
+		  "upnp:album,"
+		  "upnp:originalTrackNumber"
 		"</SortCaps>"
 		"</u:%sResponse>";
 
@@ -324,6 +325,7 @@ mime_to_ext(const char * mime, char * buf)
 	}
 }
 
+/* Standard DLNA/UPnP filter flags */
 #define FILTER_CHILDCOUNT                        0x00000001
 #define FILTER_DC_CREATOR                        0x00000002
 #define FILTER_DC_DATE                           0x00000004
@@ -345,9 +347,12 @@ mime_to_ext(const char * mime, char * buf)
 #define FILTER_UPNP_GENRE                        0x00040000
 #define FILTER_UPNP_ORIGINALTRACKNUMBER          0x00080000
 #define FILTER_UPNP_SEARCHCLASS                  0x00100000
-#define FILTER_SEC                               0x00200000
-#define FILTER_SEC_CAPTION_INFO                  0x00400000
-#define FILTER_SEC_CAPTION_INFO_EX               0x00800000
+/* Vendor-specific filter flags */
+#define FILTER_SEC_CAPTION_INFO_EX               0x01000000
+#define FILTER_SEC_DCM_INFO                      0x02000000
+#define FILTER_PV_SUBTITLE_FILE_TYPE             0x04000000
+#define FILTER_PV_SUBTITLE_FILE_URI              0x08000000
+#define FILTER_AV_MEDIA_CLASS                    0x10000000
 
 static u_int32_t
 set_filter_flags(char * filter, struct upnphttp *h)
@@ -356,7 +361,8 @@ set_filter_flags(char * filter, struct upnphttp *h)
 	u_int32_t flags = 0;
 
 	if( !filter || (strlen(filter) <= 1) )
-		return 0xFFFFFFFF;
+		/* Not the full 32 bits.  Skip vendor-specific stuff by default. */
+		return 0xFFFFFF;
 	if( h->reqflags & FLAG_SAMSUNG )
 		flags |= FILTER_DLNA_NAMESPACE;
 	item = strtok_r(filter, ",", &saveptr);
@@ -471,15 +477,25 @@ set_filter_flags(char * filter, struct upnphttp *h)
 			flags |= FILTER_RES;
 			flags |= FILTER_RES_SIZE;
 		}
-		else if( strcmp(item, "sec:CaptionInfo") == 0)
+		else if( strcmp(item, "sec:CaptionInfoEx") == 0 )
 		{
-			flags |= FILTER_SEC;
-			flags |= FILTER_SEC_CAPTION_INFO;
-		}
-		else if( strcmp(item, "sec:CaptionInfoEx") == 0)
-		{
-			flags |= FILTER_SEC;
 			flags |= FILTER_SEC_CAPTION_INFO_EX;
+		}
+		else if( strcmp(item, "sec:dcmInfo") == 0 )
+		{
+			flags |= FILTER_SEC_DCM_INFO;
+		}
+		else if( strcmp(item, "res@pv:subtitleFileType") == 0 )
+		{
+			flags |= FILTER_PV_SUBTITLE_FILE_TYPE;
+		}
+		else if( strcmp(item, "res@pv:subtitleFileUri") == 0 )
+		{
+			flags |= FILTER_PV_SUBTITLE_FILE_URI;
+		}
+		else if( strcmp(item, "av:mediaClass") == 0 )
+		{
+			flags |= FILTER_AV_MEDIA_CLASS;
 		}
 		item = strtok_r(NULL, ",", &saveptr);
 	}
@@ -533,6 +549,10 @@ parse_sort_criteria(char *sortCriteria, int *error)
 		else if( strcasecmp(item, "upnp:originalTrackNumber") == 0 )
 		{
 			strcat(order, "d.DISC, d.TRACK");
+		}
+		else if( strcasecmp(item, "upnp:album") == 0 )
+		{
+			strcat(order, "d.ALBUM");
 		}
 		else
 		{
@@ -619,6 +639,17 @@ add_res(char *size, char *duration, char *bitrate, char *sampleFrequency,
 	if( resolution && (args->filter & FILTER_RES_RESOLUTION) ) {
 		strcatf(args->str, "resolution=\"%s\" ", resolution);
 	}
+	if( args->filter & (FILTER_PV_SUBTITLE_FILE_TYPE|FILTER_PV_SUBTITLE_FILE_URI) )
+	{
+		if( sql_get_int_field(db, "SELECT ID from CAPTIONS where ID = '%s'", detailID) > 0 )
+		{
+			if( args->filter & FILTER_PV_SUBTITLE_FILE_TYPE )
+				strcatf(args->str, "pv:subtitleFileType=\"SRT\" ");
+			if( args->filter & FILTER_PV_SUBTITLE_FILE_URI )
+				strcatf(args->str, "pv:subtitleFileUri=\"http://%s:%d/Captions/%s.srt\" ",
+			                lan_addr[args->iface].str, runtime_vars.port, detailID);
+		}
+	}
 	strcatf(args->str, "protocolInfo=\"http-get:*:%s:%s\"&gt;"
 	                          "http://%s:%d/MediaItems/%s.%s"
 	                          "&lt;/res&gt;",
@@ -687,6 +718,7 @@ callback(void *args, int argc, char **argv, char **azColName)
 
 	if( strncmp(class, "item", 4) == 0 )
 	{
+		char *alt_title = NULL;
 		/* We may need special handling for certain MIME types */
 		if( *mime == 'v' )
 		{
@@ -730,6 +762,18 @@ callback(void *args, int argc, char **argv, char **azColName)
 					strcpy(mime+8, "mkv");
 				}
 			}
+			/* LG hack: subtitles won't get used unless dc:title contains a dot. */
+			else if( passed_args->client == ELGDevice && (passed_args->filter & FILTER_RES) )
+			{
+				if( sql_get_int_field(db, "SELECT ID from CAPTIONS where ID = '%s'", detailID) > 0 )
+				{
+					ret = asprintf(&alt_title, "%s.", title);
+					if( ret > 0 )
+						title = alt_title;
+					else
+						alt_title = NULL;
+				}
+			}
 		}
 		else if( *mime == 'a' )
 		{
@@ -766,7 +810,7 @@ callback(void *args, int argc, char **argv, char **azColName)
 		if( date && (passed_args->filter & FILTER_DC_DATE) ) {
 			ret = strcatf(str, "&lt;dc:date&gt;%s&lt;/dc:date&gt;", date);
 		}
-		if( (passed_args->flags & FLAG_SAMSUNG) && (passed_args->filter & FILTER_SEC_CAPTION_INFO_EX) ) {
+		if( passed_args->filter & FILTER_SEC_DCM_INFO ) {
 			/* Get bookmark */
 			ret = strcatf(str, "&lt;sec:dcmInfo&gt;CREATIONDATE=0,FOLDER=%s,BM=%d&lt;/sec:dcmInfo&gt;",
 			              title, sql_get_int_field(db, "SELECT SEC from BOOKMARKS where ID = '%s'", detailID));
@@ -921,24 +965,27 @@ callback(void *args, int argc, char **argv, char **azColName)
 					}
 					break;
 				case ELGDevice:
-					if( sql_get_int_field(db, "SELECT ID from CAPTIONS where ID = '%s'", detailID) > 0 )
+					if( alt_title )
 					{
 						ret = strcatf(str, "&lt;res protocolInfo=\"http-get:*:text/srt:*\"&gt;"
 						                     "http://%s:%d/Captions/%s.srt"
 						                   "&lt;/res&gt;",
 						                   lan_addr[passed_args->iface].str, runtime_vars.port, detailID);
+						free(alt_title);
 					}
 					break;
 				case ESamsungSeriesC:
-					if( sql_get_int_field(db, "SELECT ID from CAPTIONS where ID = '%s'", detailID) > 0 )
-					{
-						ret = strcatf(str, "&lt;sec:CaptionInfoEx sec:type=\"srt\"&gt;"
-						                     "http://%s:%d/Captions/%s.srt"
-						                   "&lt;/sec:CaptionInfoEx&gt;",
-						                   lan_addr[passed_args->iface].str, runtime_vars.port, detailID);
-					}
-					break;
 				default:
+					if( passed_args->filter & FILTER_SEC_CAPTION_INFO_EX )
+					{
+						if( sql_get_int_field(db, "SELECT ID from CAPTIONS where ID = '%s'", detailID) > 0 )
+						{
+							ret = strcatf(str, "&lt;sec:CaptionInfoEx sec:type=\"srt\"&gt;"
+							                     "http://%s:%d/Captions/%s.srt"
+							                   "&lt;/sec:CaptionInfoEx&gt;",
+							                   lan_addr[passed_args->iface].str, runtime_vars.port, detailID);
+						}
+					}
 					break;
 				}
 			}
@@ -986,6 +1033,20 @@ callback(void *args, int argc, char **argv, char **azColName)
 			}
 			ret = strcatf(str, "&gt;http://%s:%d/AlbumArt/%s-%s.jpg&lt;/upnp:albumArtURI&gt;",
 			                   lan_addr[passed_args->iface].str, runtime_vars.port, album_art, detailID);
+		}
+		if( passed_args->filter & FILTER_AV_MEDIA_CLASS ) {
+			char class;
+			if( strncmp(id, MUSIC_ID, sizeof(MUSIC_ID)) == 0 )
+				class = 'M';
+			else if( strncmp(id, VIDEO_ID, sizeof(VIDEO_ID)) == 0 )
+				class = 'V';
+			else if( strncmp(id, IMAGE_ID, sizeof(IMAGE_ID)) == 0 )
+				class = 'P';
+			else
+				class = 0;
+			if( class )
+				ret = strcatf(str, "&lt;av:mediaClass xmlns:av=\"urn:schemas-sony-com:av\"&gt;"
+				                    "%c&lt;/av:mediaClass&gt;", class);
 		}
 		ret = strcatf(str, "&lt;/container&gt;");
 	}
@@ -1048,9 +1109,9 @@ BrowseContentDirectory(struct upnphttp * h, const char * action)
 	args.iface = h->iface;
 	args.filter = set_filter_flags(Filter, h);
 	if( args.filter & FILTER_DLNA_NAMESPACE )
-	{
 		ret = strcatf(&str, DLNA_NAMESPACE);
-	}
+	if( args.filter & (FILTER_PV_SUBTITLE_FILE_TYPE|FILTER_PV_SUBTITLE_FILE_URI) )
+		ret = strcatf(&str, PV_NAMESPACE);
 	strcatf(&str, "&gt;\n");
 
 	args.returned = 0;
