@@ -1,6 +1,8 @@
 1.0.23 - Released 00-Month-0000
 --------------------------------
 - Enable the subtitle menu on some Samsung TV's.
+- Add subtitle support for Panasonic TV's.
+- Add workarounds for LifeTab tablets' bad behavior.
 
 1.0.22 - Released 24-Aug-2011
 --------------------------------
